--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header class="text-center py-10">
     <h1 class="text-4xl md:text-5xl font-bold text-blue-700">
-      Men’s Health India
+      Bharat Men's Health Foundation
     </h1>
     <p class="mt-4 text-lg md:text-xl">
       Changing the conversation around men’s health in India.
