added first article

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         the shadows.
       </p>
     </div>
-
     <div class="border rounded-lg shadow p-6">
       <h2 class="text-2xl font-semibold mb-2">Featured Articles</h2>
       <ul class="list-disc ml-6">
+        <li> <a href="/articles/article1.html" class="text-blue-600 hover:underline">Why Men’s Health in India Deserves Urgent Attention</a></li>
         <li>How Indian Men Cope with Depression</li>
         <li>What No One Tells You About Men’s Sexual Health</li>
         <li>Real Stories from Men Like You</li>
@@ -66,7 +66,7 @@
   </section>
 
   <footer class="text-center py-6 text-gray-500">
-    © 2025 Men’s Health India. All rights reserved.
+    © 2025 Bharat Men's Health Foundation. All rights reserved.
   </footer>
 
 </body>
