--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="border rounded-lg shadow p-6">
       <h2 class="text-2xl font-semibold mb-2">Featured Articles</h2>
       <ul class="list-disc ml-6">
-        <li> <a href="/articles/article1.html" class="text-blue-600 hover:underline">Why Men’s Health in India Deserves Urgent Attention</a></li>
+        <li> <a href="articles/article1.html" class="text-blue-600 hover:underline">Why Men’s Health in India Deserves Urgent Attention</a></li>
         <li>How Indian Men Cope with Depression</li>
         <li>What No One Tells You About Men’s Sexual Health</li>
         <li>Real Stories from Men Like You</li>
